// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Config Object > get policy() 1`] = `
[
  {
    "feedback": {
      "frozen-state": "This is No-No",
      "unfreeze-state": "This is Yes-Yes",
    },
    "tags": [
      "alpha",
      "beta",
    ],
  },
]
`;

exports[`Config Object > get policy() 2`] = `
[
  "alpha",
  "beta",
]
`;

exports[`Config Object > get policy() 3`] = `
{
  "frozen-state": "This is No-No",
  "unfreeze-state": "This is Yes-Yes",
}
`;

exports[`Config Object > get policy() 4`] = `"This is No-No"`;

exports[`Config Object > get policy() 5`] = `"This is Yes-Yes"`;
